Update dolphin photo location references

--- a/_posts/2024-02-14-dolphin.md
+++ b/_posts/2024-02-14-dolphin.md
@@ -7,7 +7,7 @@ location: Passage, Atlantic
 tags: [atlantic, cruising, dolphin, dolphins, wildlife]
 excerpt: "From phosphorescent torpedo-run arrivals in the night to pods that stayed with us for half an hour — the Atlantic was generous with its dolphin, and we were lucky enough to witness every one."
 header:
-  teaser: https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3829-edited.jpg
+  teaser: "/reids-unzipped/assets/images/posts/jr1_3829-edited.webp"
 ---
 
 Dolphin and more dolphin…
@@ -24,30 +24,30 @@ Some of the pods stayed with us for half an hour or more, whilst others just cam
 
 This guy was particularly enthusiastic in his approach to catch us up from astern:
 
-![Dolphin racing to catch up](https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3829-edited.jpg)
+![Dolphin racing to catch up]({{ site.baseurl }}/assets/images/posts/jr1_3829-edited.webp)
 
 A selection of the others:
 
-![Dolphin at the bow](https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3764.jpg)
+![Dolphin at the bow]({{ site.baseurl }}/assets/images/posts/jr1_3764.webp)
 
-![Dolphins playing](https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3771.jpg)
-![Dolphins leaping](https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3776.jpg)
+![Dolphins playing]({{ site.baseurl }}/assets/images/posts/jr1_3771.webp)
+![Dolphins leaping]({{ site.baseurl }}/assets/images/posts/jr1_3776.webp)
 
-![Dolphin close up](https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3777.jpg)
+![Dolphin close up]({{ site.baseurl }}/assets/images/posts/jr1_3777.webp)
 
-![Pod of dolphins](https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3784.jpg)
+![Pod of dolphins]({{ site.baseurl }}/assets/images/posts/jr1_3784.webp)
 
-![Dolphins alongside](https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3791.jpg)
+![Dolphins alongside]({{ site.baseurl }}/assets/images/posts/jr1_3791.webp)
 
-![Dolphin underwater](https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3798.jpg)
-![Dolphin surfacing](https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3829.jpg)
+![Dolphin underwater]({{ site.baseurl }}/assets/images/posts/jr1_3798.webp)
+![Dolphin surfacing]({{ site.baseurl }}/assets/images/posts/jr1_3829.webp)
 
-![Dolphin in wake](https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3830.jpg)
+![Dolphin in wake]({{ site.baseurl }}/assets/images/posts/jr1_3830.webp)
 
-![Atlantic dolphin sighting](https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3811.jpg)
+![Atlantic dolphin sighting]({{ site.baseurl }}/assets/images/posts/jr1_3811.webp)
 
-![Dolphin breaching](https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3821.jpg)
+![Dolphin breaching]({{ site.baseurl }}/assets/images/posts/jr1_3821.webp)
 
-![Dolphin bow riding](https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3825.jpg)
+![Dolphin bow riding]({{ site.baseurl }}/assets/images/posts/jr1_3825.webp)
 
-![Dolphin in blue water](https://jnbreid7.wordpress.com/wp-content/uploads/2024/02/jr1_3826.jpg)
+![Dolphin in blue water]({{ site.baseurl }}/assets/images/posts/jr1_3826.webp)
