Update all photo location references

--- a/_posts/2024-04-04-st-lucia.md
+++ b/_posts/2024-04-04-st-lucia.md
@@ -7,15 +7,15 @@ location: St. Lucia, Caribbean
 tags: [cruising, mud-baths, pitons, rodney-bay, soufriere, st-lucia, waterfall]
 excerpt: "From a surprise tuna for supper on the crossing to sleeping between the Pitons — a glorious few days in St. Lucia that got everyone on board smiling again."
 header:
-  teaser: https://jnbreid7.wordpress.com/wp-content/uploads/2024/04/img_6324-1.jpg
+  teaser: "/reids-unzipped/assets/images/posts/img_6324-1.webp"
 ---
 
 Glorious few days in St. Lucia!
 
 We set off from St Anne with the prospect of a motor across to Rodney Bay, St Lucia. The forecast was for very little wind, but after 5 weeks it was high time to move on! It turned out to be one of the most glorious sails we've had on Zipper. We made the 22 mile journey in 3 hours with 8-10 knots of wind, beautiful sunshine, diving boobies and we caught a tuna for supper!
 
-![Sailing into St. Lucia](https://jnbreid7.wordpress.com/wp-content/uploads/2024/04/img_6324-1.jpg)
-![Fresh tuna catch](https://jnbreid7.wordpress.com/wp-content/uploads/2024/04/img_6338-1.jpg)
+![Sailing into St. Lucia]({{ site.baseurl }}/assets/images/posts/img_6324-1.webp)
+![Fresh tuna catch]({{ site.baseurl }}/assets/images/posts/img_6338-1.webp)
 
 Isla loves fresh fish, particularly ceviche!
 
@@ -27,11 +27,11 @@ So Soufriere it was! We arrived having had another wonderful sail and were met b
 
 We decided to explore inland a bit and the next morning Malcolm was back to take us to the tourist areas of Soufriere. We went to the mud baths — which Jamie and I enjoyed but Isla declared too smelly (the sulphur was everywhere!) and Angus didn't like because the water was too hot. But they tolerated it for long enough for Jamie and I to get muddy and exfoliated, my skin felt amazing afterwards. Then we went to the warm waterfalls. A couple of small waterfalls with three pools. Just us and another Canadian family there, we really enjoyed relaxing and enjoying the water in the rainforest. Finally we visited the 'power shower' cold waterfall. We arrived with a minibus full of other tourists and were quickly scooped up by their guide who loved Jamie and Angus's hair and she was completely smitten with them.
 
-![Soufriere mud baths](https://jnbreid7.wordpress.com/wp-content/uploads/2024/04/p3300762-1.jpg)
-![Rainforest waterfall](https://jnbreid7.wordpress.com/wp-content/uploads/2024/04/p3300800-1.jpg)
+![Soufriere mud baths]({{ site.baseurl }}/assets/images/posts/p3300762-1.webp)
+![Rainforest waterfall]({{ site.baseurl }}/assets/images/posts/p3300800-1.webp)
 
 Then it was back to Zipper and round the headland to spend the night sleeping between the Pitons before heading to our next destination.
 
-![Zipper anchored between the Pitons](https://jnbreid7.wordpress.com/wp-content/uploads/2024/04/img_6344-1.jpg)
+![Zipper anchored between the Pitons]({{ site.baseurl }}/assets/images/posts/img_6344-1.webp)
 
 Sailing and exploring really does make everyone onboard happy.
